WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
134226
AX: Crash at com.apple.WebCore: WebCore::AlternativeTextController::removeDictationAlternativesForMarker + 43
https://bugs.webkit.org/show_bug.cgi?id=134226
Summary
AX: Crash at com.apple.WebCore: WebCore::AlternativeTextController::removeDic...
chris fleizach
Reported
2014-06-23 16:43:22 PDT
> 1 com.apple.WebCore 0x7fff8f8410cb WebCore::AlternativeTextController::removeDictationAlternativesForMarker(WebCore::DocumentMarker const*) + 0x2b
2 com.apple.WebCore 0x7fff8f73bc84 WebCore::Editor::updateMarkersForWordsAffectedByEditing(bool) + 0x854 3 com.apple.WebCore 0x7fff8f747605 WebCore::TypingCommand::deleteKeyPressed(WebCore::TextGranularity, bool) + 0x45 4 com.apple.WebCore 0x7fff8f73d030 WebCore::CompositeEditCommand::apply() + 0xa0 5 com.apple.WebCore 0x7fff9027f5d0 WebCore::TypingCommand::deleteKeyPressed(WebCore::Document&, unsigned int, WebCore::TextGranularity) + 0x190 6 com.apple.WebCore 0x7fff8f747418 WebCore::Editor::deleteWithDirection(WebCore::SelectionDirection, WebCore::TextGranularity, bool, bool) + 0x198 7 com.apple.WebCore 0x7fff8f9e5d8f WebCore::executeDeleteBackward(WebCore::Frame&, WebCore::Event*, WebCore::EditorCommandSource, WTF::String const&) + 0x1f 8 com.apple.WebCore 0x7fff8f747264 WebCore::Editor::Command::execute(WTF::String const&, WebCore::Event*) const + 0xb4 9 com.apple.WebCore 0x7fff8f74717d WebCore::Editor::Command::execute(WebCore::Event*) const + 0x1d 10 com.apple.WebKitLegacy 0x7fff926dc63e -[WebHTMLView(WebNSTextInputSupport) doCommandBySelector:] + 0x24e 11 com.apple.WebKitLegacy 0x7fff926d85bb -[WebHTMLView(WebInternal) _executeSavedKeypressCommands] + 0x11b 12 com.apple.WebKitLegacy 0x7fff926d771d -[WebHTMLView(WebInternal) _interpretKeyEvent:savingCommands:] + 0x23d 13 com.apple.WebKitLegacy 0x7fff926d77fb WebEditorClient::handleKeyboardEvent(WebCore::KeyboardEvent*) + 0x5b 14 com.apple.WebCore 0x7fff8f739f63 WebCore::EventHandler::defaultKeyboardEventHandler(WebCore::KeyboardEvent*) + 0x43 15 com.apple.WebCore 0x7fff8f9f786c WebCore::EventDispatcher::dispatchEvent(WebCore::Node*, WTF::PassRefPtr<WebCore::Event>) + 0x5fc 16 com.apple.WebCore 0x7fff8f4ea12d WebCore::Node::dispatchEvent(WTF::PassRefPtr<WebCore::Event>) + 0x1d 17 com.apple.WebCore 0x7fff8f72d858 WebCore::EventTarget::dispatchEvent(WTF::PassRefPtr<WebCore::Event>, int&) + 0x78 18 com.apple.WebCore 0x7fff8f7394e7 WebCore::EventHandler::keyEvent(WebCore::PlatformKeyboardEvent const&) + 0x477 19 com.apple.WebCore 0x7fff8f9fbb29 WebCore::EventHandler::keyEvent(NSEvent*) + 0xa9 20 com.apple.WebKitLegacy 0x7fff926d78fa -[WebHTMLView keyDown:] + 0xea 21 com.apple.mail 0x1029cf638 -[MessageWebHTMLView keyDown:] + 0x196 (/SourceCache/Mail/Mail-1949/Mail/MessageDisplay/WebView/MessageWebHTMLView.m:525) 22 com.apple.AppKit 0x7fff8a8513b8 -[NSWindow _reallySendEvent:] + 0x770 23 com.apple.AppKit 0x7fff8a2ebc90 -[NSWindow sendEvent:] + 0x170 24 com.apple.mail 0x1029c2053 -[TypeAheadWindow sendEvent:] + 0x399 (/SourceCache/Mail/Mail-1949/Mail/Compose/TypeAheadWindow.m:139) 25 com.apple.AppKit 0x7fff8a29e32c -[NSApplication sendEvent:] + 0xfb4 26 com.apple.mail 0x102976763 -[MailApp sendEvent:] + 0x99 (/SourceCache/Mail/Mail-1949/Mail/Application/MailApp.m:462) 27 com.apple.AppKit 0x7fff8a128cb8 -[NSApplication run] + 0x2c7 28 com.apple.AppKit 0x7fff8a1146be NSApplicationMain + 0x6f2 29 libdyld.dylib 0x7fff8c4005c9 start + 0x1 * STATISTICS
Attachments
patch
(5.83 KB, patch)
2014-06-23 16:44 PDT
,
chris fleizach
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from webkit-ews-09 for mac-mountainlion-wk2
(645.97 KB, application/zip)
2014-06-23 17:51 PDT
,
Build Bot
no flags
Details
patch
(6.90 KB, patch)
2014-06-23 23:10 PDT
,
chris fleizach
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2014-06-23 16:43:31 PDT
<
rdar://problem/16965651
>
chris fleizach
Comment 2
2014-06-23 16:44:24 PDT
Created
attachment 233653
[details]
patch
Build Bot
Comment 3
2014-06-23 17:51:15 PDT
Comment on
attachment 233653
[details]
patch
Attachment 233653
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.appspot.com/results/5396896998752256
New failing tests: platform/mac/editing/input/crash-for-empty-text-alternative.html media/W3C/video/networkState/networkState_during_loadstart.html
Build Bot
Comment 4
2014-06-23 17:51:17 PDT
Created
attachment 233660
[details]
Archive of layout-test-results from webkit-ews-09 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-09 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.5
chris fleizach
Comment 5
2014-06-23 23:10:45 PDT
Created
attachment 233687
[details]
patch
Enrica Casucci
Comment 6
2014-06-25 09:17:49 PDT
Comment on
attachment 233687
[details]
patch Looks good to me.
WebKit Commit Bot
Comment 7
2014-06-25 09:57:07 PDT
Comment on
attachment 233687
[details]
patch Clearing flags on attachment: 233687 Committed
r170429
: <
http://trac.webkit.org/changeset/170429
>
WebKit Commit Bot
Comment 8
2014-06-25 09:57:10 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug